# felt

./: .gitignore  BUILD_STATUS.md  HANDOVER.md  README.md  RECON.md  pyproject.toml
feeld/: __init__.py  auth.py  cli.py  client.py  config.py  models.py  queries.py
scripts/: introspect.py
tui/: __init__.py  app.py
web/: app.py
web/static/: app.js  style.css
web/templates/: index.html
